Archive2/6d/073f38735b6b48/output
main.cpp:13:5: error: no matching function for call to 'add'
    add(x, inc);
    ^~~
main.cpp:7:6: note: candidate template ignored: couldn't infer template argument 'FUNC'
void add(int &x, FUNC f) {
     ^
1 error generated.
